--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <a href="Class.html">Class</a><br />
     <a href="ClassSelect.html">ClassSelect</a><br />
     <a href="Grouping.html">Grouping</a><br />
-    <a href="ClassSelectExternal.html">ClassSelect</a><br />
+    <a href="ClassSelectExternal.html">ClassSelectExternal</a><br />
 </body>
 </html>
