--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <a href="ClassSelect.html">ClassSelect</a><br />
     <a href="Grouping.html">Grouping</a><br />
     <a href="ClassSelectExternal.html">ClassSelectExternal</a><br />
+    <a href="Cascade.html">Cascade</a><br />
+
 </body>
 </html>
