--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
  
  <html>
     <head>
-        <title>Joe's Resume</title>
+        <title>John's Resume</title>
         <link href="style.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <header>
-            <h1>Joe Erickson</h1>
-            <h2>Senior Developer</h2>
+            <h1>John Fulton</h1>
+            <h2>.NET Instructor</h2>
             <div class="image-holder">
             <img src="John.jpg" title="John Fulton" alt="A picture of John Fulton, .NET Instructor">
             </div>
         </header>
         <nav>
-            <a href="#">Portfolio</a>
-            <a href="#">LinkedIn</a>
+            <a href="#">Resume</a>
+            <a href="https://www.linkedin.com/in/fultonconsulting">LinkedIn</a>
         </nav>
         <section>
             <p>
@@ -25,7 +25,7 @@
                 Now hold on. This isn't as bad as it seems. I just need to relax and be myself. I'm not so bad, right? Right?
             </p>
             <footer>
-                Copyright 2017 Joe Erickson
+                Copyright &copy; 2017 John Fulton
             </footer>
         </section>
     </body>
