--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
             </div>
         </header>
         <nav>
-            <a href="#">Resume</a>
+            <a href="resume.html">Resume</a>
             <a href="https://www.linkedin.com/in/fultonconsulting">LinkedIn</a>
         </nav>
         <section>
             <p>
-                This is where all the information for my resume will go. It has lots of buzzwords and keywords that will get me hired. Or at least looked at. I mean, I still have to go through an interview process that takes way too long, in my opinion. Oh, no. That means I'll have to talk to people. And they're going to be judging me and talking about me in some way.
+                Add more information here.....
             </p>
-            <p>
-                Now hold on. This isn't as bad as it seems. I just need to relax and be myself. I'm not so bad, right? Right?
-            </p>
+
             <footer>
                 Copyright &copy; 2017 John Fulton
             </footer>
