--- a/resume.html
+++ b/resume.html
@@ -241,8 +241,8 @@
           hardware and software at the Challenge Operation Center in Primm, NV</li>
       </ul>
 
-      <div class="container button-container"><a class="link-button button-nav" href="resume.html" title="Resume"
-          target="_blank">RESUME</a>
+      <div class="container button-container"><a class="link-button button-nav" href="index.html" title="Home"
+          >HOME</a>
 
         <div class="rule rule-2">
 
