--- a/index.html
+++ b/index.html
@@ -28,16 +28,24 @@
   <main class="row">
     <article class="coffee-span-8 coffee-880-span-8 coffee-549-span-12 coffee-700-span-12">
 
-      <p class="paragraph">John has spent over 35 years as a professional developer, programming on a wide variety of systems from large
-        mainframe computers to desktop computers and web-based systems. His most recent experience was 17 years at Grange Insurance as a
-        Lead Programmer Analyst where he designed and developed a variety of .Net-based systems that interact with the company's agents and
-        policyholders. In addition to a Bachelor's and Master’s degree in computer science, John has a masters degree in Cybersecurity. He
-        taught Computer Science for over 10 years as an adjunct faculty member at Franklin University. In 2016, he spent a month teaching
+      <p class="paragraph">John has spent over 35 years as a professional developer, programming on a wide variety of
+        systems from large
+        mainframe computers to desktop computers and web-based systems. His most recent experience was 17 years at
+        Grange Insurance as a
+        Lead Programmer Analyst where he designed and developed a variety of .Net-based systems that interact with the
+        company's agents and
+        policyholders. In addition to a Bachelor's and Master’s degree in computer science, John has a masters degree in
+        Cybersecurity. He
+        taught Computer Science for over 10 years as an adjunct faculty member at Franklin University. In 2016, he spent
+        a month teaching
         computer algorithms as a visiting scholar at a college in Muscat, Oman.</p>
 
-      <p class="paragraph">John has always been the “go to” guy when others needed an explanation for technical topics. In addition to his
-        time teaching beginner programming students at Franklin University, John has acted an a mentor and resource for many programmers and
-        people who wanted to become programmers. A committed tinker, his workbench is packed with the small robots that he builds and programs
+      <p class="paragraph">John has always been the “go to” guy when others needed an explanation for technical topics.
+        In addition to his
+        time teaching beginner programming students at Franklin University, John has acted an a mentor and resource for
+        many programmers and
+        people who wanted to become programmers. A committed tinker, his workbench is packed with the small robots that
+        he builds and programs
         in his spare time.</p>
 
 
@@ -54,12 +62,11 @@
 
       <div class="container nav-container">
         <h2 class="heading-1">PROJECTS</h2>
-        <a class="link-text nav-link" href="#">Navigation 1</a>
-        <a class="link-text nav-link" href="#">Navigation 2</a>
-        <a class="link-text nav-link" href="#">Navigation 3</a>
-        <a class="link-text nav-link" href="#">Navigation 4</a>
-        <a class="link-text nav-link" href="#">Navigation 5</a>
-        <a class="link-text nav-link" href="#">Navigation 6</a>
+        <a class="link-text nav-link" href="https://github.com/johnfultonorg/passwordgenerator">PasswordGenerator - A
+          Windows form application to generate random passwords locally</a>
+        <a class="link-text nav-link"
+          href="https://github.com/johnfultonorg/hello_python_flask_mysql">Python/Flash/MySQL, an Example - A simple full-stack application using python.</a>
+
         <div class="rule rule-2">
 
         </div>
