--- a/resume.html
+++ b/resume.html
@@ -254,7 +254,7 @@
 
       <div class="container nav-container">
         <h2 class="heading-1">PROJECTS</h2>
-        <a class="link-text nav-link" href="#">Navigation 1</a>
+        <a class="link-text nav-link" href="https://github.com/johnfultonorg/passwordgenerator">PasswordGenerator</a>
         <a class="link-text nav-link" href="#">Navigation 2</a>
         <a class="link-text nav-link" href="#">Navigation 3</a>
         <a class="link-text nav-link" href="#">Navigation 4</a>
