cleanup projects list

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <a class="link-text nav-link" href="https://github.com/johnfultonorg/passwordgenerator">PasswordGenerator - A
           Windows form application to generate random passwords locally</a>
         <a class="link-text nav-link"
-          href="https://github.com/johnfultonorg/hello_python_flask_mysql">Python/Flash/MySQL, an Example - A simple full-stack application using python.</a>
-
+          href="https://github.com/johnfultonorg/hello_python_flask_mysql">Python/Flash/MySQL, an Example - A simple
+          full-stack application using python.</a>
         <div class="rule rule-2">
 
         </div>
