--- a/resume.html
+++ b/resume.html
@@ -254,12 +254,11 @@
 
       <div class="container nav-container">
         <h2 class="heading-1">PROJECTS</h2>
-        <a class="link-text nav-link" href="https://github.com/johnfultonorg/passwordgenerator">PasswordGenerator</a>
-        <a class="link-text nav-link" href="#">Navigation 2</a>
-        <a class="link-text nav-link" href="#">Navigation 3</a>
-        <a class="link-text nav-link" href="#">Navigation 4</a>
-        <a class="link-text nav-link" href="#">Navigation 5</a>
-        <a class="link-text nav-link" href="#">Navigation 6</a>
+        <a class="link-text nav-link" href="https://github.com/johnfultonorg/passwordgenerator">PasswordGenerator - A
+          Windows form application to generate random passwords locally</a>
+        <a class="link-text nav-link"
+          href="https://github.com/johnfultonorg/hello_python_flask_mysql">Python/Flash/MySQL, an Example - A simple
+          full-stack application using python.</a>
         <div class="rule rule-2">
 
         </div>
