--- a/index.html
+++ b/index.html
@@ -22,12 +22,18 @@
         <h1 class="page-heading">John Fulton</h1>
         <p class="paragraph tagline">INSTRUCTOR - Tech Elevator, Inc.<br>
         </p>
+        <nav>
+          <ul class="tab-nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="resume.html" target="_blank">Resume</a></li>
+            <li><a href="courses.html">Courses Taught</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
   </div>
   <main class="row">
     <article class="coffee-span-8 coffee-880-span-8 coffee-549-span-12 coffee-700-span-12">
-
       <p class="paragraph">John has spent over 35 years as a professional developer, programming on a wide variety of
         systems from large
         mainframe computers to desktop computers and web-based systems. His most recent experience was 17 years at
@@ -47,21 +53,9 @@
         people who wanted to become programmers. A committed tinker, his workbench is packed with the small robots that
         he builds and programs
         in his spare time.</p>
-
-
-      <div class="container button-container"><a class="link-button button-nav" href="resume.html" title="Resume"
-          target="_blank">RESUME</a>
-
-        <div class="rule rule-2">
-
-        </div>
-      </div>
     </article>
     <div class="coffee-span-4 coffee-549-span-12 coffee-700-span-12">
       <img src="John.jpg">
-
-
-
     </div>
   </main>
   <div class="row full-width-row footer">
