--- a/resume.html
+++ b/resume.html
@@ -24,6 +24,13 @@
         </a>
         <p class="paragraph tagline">INSTRUCTOR - Tech Elevator, Inc.<br>
         </p>
+        <nav>
+          <ul class="tab-nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="resume.html" target="_blank">Resume</a></li>
+            <li><a href="courses.html">Courses Taught</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
   </div>
@@ -218,49 +225,4 @@
         </li>
         <li>Expert Fact Witness – Joao Bock Transaction Systems, LLC v. Jack Henry & Associates, Inc., District of
           Delaware,
-          Case No. 1:12-cv-01138 (2013-2014) Provided expert report on obviousness for defendant.</li>
-      </ul>
-
-      <br>
-      <h2 class="heading-1"> Past Professional Interests and Positions:</h2>
-      <ul>
-        <li>Chair, Financial Services Working Group, North American ISDN Users Forum, sponsored by National Institute of
-          Standards and Technology (NIST)</li>
-        <li> Co-investigator, Study on the use of an Advanced Communications Technology Satellite (ACTS) to provide
-          disaster
-          recovery communications, a joint project with Huntington Banks, NASA and Ohio University (ACTS was launched by
-          the shuttle Discovery September, 1993 as a part of STS-51)</li>
-        <li>Member, ANSI ANS X.12 working group on bill rendering for retail payments (X12/WG3/SG4)</li>
-        <li>Associate, Center for Advanced Study in Telecommunications (CAST), Ohio State University. An honorary title,
-          associates “…have expertise in some area of telecommunications or are engaged in telecommunications research.”
-        </li>
-        <li>Member, Advisory Board, McClure School of Communications Systems Management, Ohio University, Athens, Ohio
-        </li>
-        <li>Member of the Core Technical Staff, 2004 DARAP Grand Challenge. As a volunteer provided support for a
-          variety of
-          hardware and software at the Challenge Operation Center in Primm, NV</li>
-      </ul>
-
-      <div class="container button-container"><a class="link-button button-nav" href="index.html" title="Home"
-          >HOME</a>
-
-        <div class="rule rule-2">
-
-        </div>
-      </div>
-    </article>
-    <div class="coffee-span-4 coffee-549-span-12 coffee-700-span-12">
-      <img src="John.jpg">
-
-    </div>
-  </main>
-  <div class="row full-width-row footer">
-    <div class="coffee-span-12">
-      <footer class="subgrid">
-
-      </footer>
-    </div>
-  </div>
-</body>
-
-</html>
+          Case No.
