V 3.0 with courses page

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <header class="coffee-span-12">
       <div class="container header-container">
         <h1 class="page-heading">John Fulton</h1>
-        <p class="paragraph tagline">INSTRUCTOR - Tech Elevator, Inc.<br>
+        <p class="paragraph tagline">Lecturer and Student Coordinator, Computing Sciences, Franklin University<br>
         </p>
         <nav>
           <ul class="tab-nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="resume.html" target="_blank">Resume</a></li>
+            <li class="active-tab"><a href="index.html">Home</a></li>
+            <li><a href="resume.html" >Resume</a></li>
             <li><a href="courses.html">Courses Taught</a></li>
           </ul>
         </nav>
@@ -45,10 +45,23 @@
         taught Computer Science for over 10 years as an adjunct faculty member at Franklin University. In 2016, he spent
         a month teaching
         computer algorithms as a visiting scholar at a college in Muscat, Oman.</p>
+      <p class="paragraph">After 7 years as an instruction in  coding bootcamp, in May of 2024, John joined Franklin University as a fullt-time faculty member, teaching in
+        Computing Sciences
+        and Mathematics,</p>
+
+      <p class="paragraph">John is the first-named inventor of two patents for a user interface for banking, bill
+        paying, and shopping. He
+        has acted as an expert witness and consultant in several court cases concerning banking technology.
+      </p>
+
+      <p class="paragraph">John lives in Bexley with his wife, their dog, and two cats. He has 4 adult children who are
+        spread between
+        Columbus and Atlanta and two granddaughters.
+      </p>
 
       <p class="paragraph">John has always been the “go to” guy when others needed an explanation for technical topics.
         In addition to his
-        time teaching beginner programming students at Franklin University, John has acted an a mentor and resource for
+        time teaching beginner programming students at Franklin University and at a coding bootcamp,  John has acted an a mentor and resource for
         many programmers and
         people who wanted to become programmers. A committed tinker, his workbench is packed with the small robots that
         he builds and programs
