--- a/resume.html
+++ b/resume.html
@@ -22,12 +22,12 @@
         <a href="index.html">
           <h1 class="page-heading">John Fulton</h1>
         </a>
-        <p class="paragraph tagline">INSTRUCTOR - Tech Elevator, Inc.<br>
+        <p class="paragraph tagline">Lecturer and Student Coordinator, Computing Sciences, Franklin University<br>
         </p>
         <nav>
           <ul class="tab-nav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="resume.html" target="_blank">Resume</a></li>
+            <li class="active-tab"><a href="resume.html">Resume</a></li>
             <li><a href="courses.html">Courses Taught</a></li>
           </ul>
         </nav>
@@ -42,14 +42,24 @@
         49 N. Merkle Rd.<br>
         Bexley, OH 43209<br>
         (614) 565-8382<br>
-       <a href="mailto:john@TechElevator.com">john@TechElevator.com</a><br>
+        <a href="mailto:john@TechElevator.com">john.fulton2@franklin.edu</a><br>
         john.fulton@OrdinarySkill.org<br>
         john@johnfulton.org<br>
 
       <h2 class="heading-1">Employment History:</h2><br>
 
+      <h3 class="heading-1"> Lecturer and Student Coordinator 2024 - current</h3>
+      <a href="http://techelevator.com">Franklin University</a><br>
+      Columbus, OH
 
-      <h3 class="heading-1"> Instructor 2017- current</h3>
+      <ul>
+        <li>Preparing and delivering lectures, labs, and other instructional activities for both on-campus and online courses.</li>
+        <li>Evaluation of student assignemtns and providing feedback</li>
+        <li>Acting as a point of contact and a resource for students</li>
+      </ul>
+
+      <br>
+      <h3 class="heading-1"> Instructor 2017 - 2024</h3>
       <a href="http://techelevator.com">Tech Elevator</a><br>
       Columbus, OH
 
@@ -109,42 +119,43 @@
 
       <br>
       <h3 class="heading-1"> Senior Technical Consultant 1991 – 1994</h3>
-<ul>
-  <li>Primary project responsibility: Huntington/AT&T Smart Phone project</li>
-  <li>Responsible for team of 3 technical consultants</li>
-  <li>Product development and design</li>
- <li> Technical and business planning for a new line of business</li>
-  <li>Vendor support and management</li>
-  <li>Human interface design</li>
-  <li>Technical interpretation, education and evaluation for marketing group</li>
-  <li>Sales call planning, preparation and evaluation</li>
-</ul>
-  
-  <br>
-      <h3 class="heading-1">  Manager of Network and Communication Systems Research 1989 – 1991</h3>
-<ul>
-  <li>Projects included Virtual Voice Network, Intelligent T-1 multiplexor network, Desk-top videoconferencing</li>
-  <li>Reporting to Communications Director (voice and data communications)</li>
- <li> Responsible for up to 4 analysts and project managers</li>
-  <li>Research on current and projected industry directions</li>
-  <li>Early project management for major implementations</li>
-  <li>Internal and external customer consulting and sales support</li>
-  <li>Initial management of Local Area Network implementations and support group</li>
-</ul>
-  
-  <br>
-      <h3 class="heading-1"> Lead Programmer/Analyst 1983 – 1989</h3>  
-<ul>
-  <li>Support for Interactive Voice Response, Automated Teller Machine networks, Wire Transfer, 100 Megabit/second
-  <li>inter-host link, inter-organizational file transfer</li>
-  <li>Responsible for up to 12 programmers and senior programmers</li>
-  <li>Work load, hire/fire and line management responsibilities</li>
-  <li>Team building, productivity and quality responsibilities</li>
-  <li>Technical resource for internal and external customers</li>
-</ul>
+      <ul>
+        <li>Primary project responsibility: Huntington/AT&T Smart Phone project</li>
+        <li>Responsible for team of 3 technical consultants</li>
+        <li>Product development and design</li>
+        <li> Technical and business planning for a new line of business</li>
+        <li>Vendor support and management</li>
+        <li>Human interface design</li>
+        <li>Technical interpretation, education and evaluation for marketing group</li>
+        <li>Sales call planning, preparation and evaluation</li>
+      </ul>
 
       <br>
-      <h3 class="heading-1">  Senior Programmer 1982 – 1983</h3>
+      <h3 class="heading-1"> Manager of Network and Communication Systems Research 1989 – 1991</h3>
+      <ul>
+        <li>Projects included Virtual Voice Network, Intelligent T-1 multiplexor network, Desk-top videoconferencing
+        </li>
+        <li>Reporting to Communications Director (voice and data communications)</li>
+        <li> Responsible for up to 4 analysts and project managers</li>
+        <li>Research on current and projected industry directions</li>
+        <li>Early project management for major implementations</li>
+        <li>Internal and external customer consulting and sales support</li>
+        <li>Initial management of Local Area Network implementations and support group</li>
+      </ul>
+
+      <br>
+      <h3 class="heading-1"> Lead Programmer/Analyst 1983 – 1989</h3>
+      <ul>
+        <li>Support for Interactive Voice Response, Automated Teller Machine networks, Wire Transfer, 100 Megabit/second
+        <li>inter-host link, inter-organizational file transfer</li>
+        <li>Responsible for up to 12 programmers and senior programmers</li>
+        <li>Work load, hire/fire and line management responsibilities</li>
+        <li>Team building, productivity and quality responsibilities</li>
+        <li>Technical resource for internal and external customers</li>
+      </ul>
+
+      <br>
+      <h3 class="heading-1"> Senior Programmer 1982 – 1983</h3>
       <ul>
         <li>DEC, HP, Tandem, Unisys and other environments</li>
         <li>COBOL, C, various assembly and proprietary languages</li>
@@ -162,25 +173,28 @@
       </ul>
 
       <br>
-      <h3 class="heading-1">  Programmer 1978 – 1979</h3>
+      <h3 class="heading-1"> Programmer 1978 – 1979</h3>
       Oregon State University<br>
       Department of Physical Oceanography<br>
       Corvallis, OR<br>
-<ul>
-  <li> Develop, test and integrate standard set of input/output drivers for DEC PDP-11/05 to storage devices</li>
-  <li>Design, document, test and integrate software tools to allow interoperation of data gathering system with hard
-  disk, floppy disk, magnetic tape and punched paper tape</li>
-</ul>
+      <ul>
+        <li> Develop, test and integrate standard set of input/output drivers for DEC PDP-11/05 to storage devices</li>
+        <li>Design, document, test and integrate software tools to allow interoperation of data gathering system with
+          hard
+          disk, floppy disk, magnetic tape and punched paper tape</li>
+      </ul>
       <br>
-      <h2 class="heading-1">  Education:</h2>
-     <ul>
-      <li> Master of Science, Information Security (Forensics) , 2014, Utica College, Utica, NY</li>
-      <li>  Master of Science, Computer Science, 2003 , Franklin University, Columbus OH</li>
-      <li> Bachelor of Science, Computer Science, 1979, Oregon State University, Corvallis, OR (Systems Programming
-       concentration)</li>
-       <li>  Graduate work in Communication and in Industrial & Systems Engineering at The Ohio State University</li>
-       <li>  Classes, workshops and seminars: Visual C++, CICS, DB2, Network Planning, Local Area Networks, Unix, C, Memory
-       Cards, ISDN, Project Leadership, Exceptional Management Practices and many other technical and management topics</li>
+      <h2 class="heading-1"> Education:</h2>
+      <ul>
+        <li> Master of Science, Information Security (Forensics) , 2014, Utica College, Utica, NY</li>
+        <li> Master of Science, Computer Science, 2003 , Franklin University, Columbus OH</li>
+        <li> Bachelor of Science, Computer Science, 1979, Oregon State University, Corvallis, OR (Systems Programming
+          concentration)</li>
+        <li> Graduate work in Communication and in Industrial & Systems Engineering at The Ohio State University</li>
+        <li> Classes, workshops and seminars: Visual C++, CICS, DB2, Network Planning, Local Area Networks, Unix, C,
+          Memory
+          Cards, ISDN, Project Leadership, Exceptional Management Practices and many other technical and management
+          topics</li>
       </ul>
 
       <br>
