--- a/courses.html
+++ b/courses.html
@@ -1,3 +1,8 @@
+<!--
+    File: courses.html
+    This is the courses page, refactored to use the reusable navigation.
+    The JavaScript call at the bottom now specifies 'courses' as the active page.
+-->
 <!DOCTYPE html>
 <html>
 
@@ -24,13 +29,8 @@
         </a>
         <p class="paragraph tagline">Lecturer and Student Coordinator, Computing Sciences, Franklin University<br>
         </p>
-        <nav>
-          <ul class="tab-nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li class="active-tab"><a href="courses.html">Courses Taught</a></li>
-          </ul>
-        </nav>
+        <!-- This is the placeholder for our reusable navigation -->
+        <div id="nav-placeholder"></div>
       </div>
     </header>
   </div>
@@ -138,6 +138,32 @@
 
     </article>
   </main>
-</body>
+  
+  <script>
+    // This function fetches the navigation and sets the active class
+    async function loadNavigation(activePage) {
+        try {
+            // Fetch the HTML content from the nav.html file
+            const response = await fetch('nav.html');
+            const html = await response.text();
+            
+            // Insert the fetched HTML into the placeholder div
+            document.getElementById('nav-placeholder').innerHTML = html;
 
+            // Find the correct list item and add the active class
+            const activeTab = document.getElementById(`nav-${activePage}`);
+            if (activeTab) {
+                activeTab.classList.add('active-tab');
+            }
+        } catch (error) {
+            console.error('Error loading navigation:', error);
+        }
+    }
+
+    // Call the function on page load, passing the name of the active page
+    document.addEventListener('DOMContentLoaded', () => {
+        loadNavigation('courses');
+    });
+  </script>
+</body>
 </html>
