--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
       <h2 class="heading-1">Employment History:</h2><br>
 
       <h3 class="heading-1"> Lecturer and Student Coordinator 2024 - current</h3>
-      <a href="http://techelevator.com">Franklin University</a><br>
+      <a href="http://franklin.edu" target="_blank">Franklin University</a><br>
       Columbus, OH
 
       <ul>
@@ -57,7 +57,7 @@
 
       <br>
       <h3 class="heading-1"> Instructor 2017 - 2024</h3>
-      <a href="http://techelevator.com">Tech Elevator</a><br>
+      <a href="http://techelevator.com" target="_blank">Tech Elevator</a><br>
       Columbus, OH
 
       <ul>
@@ -169,7 +169,7 @@
         <li> Low-level technical troubleshooting of data communications interfaces and problems</li>
       </ul>
 
-      <br>
+      <br><br>
       <h3 class="heading-1"> Programmer 1978 – 1979</h3>
       Oregon State University<br>
       Department of Physical Oceanography<br>
@@ -213,17 +213,16 @@
             target="_blank">DARPA Grand Challenge – a pioneering event for autonomous robotic ground vehicles.</a>
           Fulton, J., & Pransky,
           J.
-          (2004). Industrial Robot: An International Journal, 31, 414-422. Abstract</li>
-        <li>Communications network interface for user friendly interactive access to online services. U.S. Patent
-          number
-          7,599,859 filed January 12, 2005, granted October 6, 2009. Based on work done in 1994 for Huntington Banks
-          with
-          co-inventors Marianne Shepard and Thomas Shafer.</li>
-        <li>Solid State Disk Forensics: Is there a path forward? A capstone project submitted in partial fulfillment of
+          (2004). Industrial Robot: An International Journal, 31, 414-422.</li>
+        <li>Communications network interface for user friendly interactive access to online services. <a
+            href="https://patents.google.com/patent/US7599859B2/en" target="_blank">U.S. Patent
+            number 7,599,858</a> filed January 12, 2005, granted October 6, 2009. Based on work done in 1994 for
+          Huntington
+          Banks with co-inventors Marianne Shepard and Thomas Shafer.</li>
+        <li><a href="https://www.proquest.com/openview/2fc9fd94215e0174621967b602a0fcb5/1" target="_blank">Solid State
+            Disk Forensics: Is there a path forward?</a> A capstone project submitted in partial fulfillment of
           the
-          requirements for the degree of Master of Science in Cybersecurity. Utica College, Utica, NY. May, 2014.
-          Abstract
-          Full text pdf</li>
+          requirements for the degree of Master of Science in Cybersecurity. Utica College, Utica, NY. May, 2014.</li>
       </ul>
 
       <br>
