--- a/other.html
+++ b/other.html
@@ -42,7 +42,7 @@
       <h3 class="heading-1"> CBUS Networking Events</h3>
       <p class="paragraph"><a href="https://cbus-networking-events.org"
           target="_blank">https://cbus-networking-events.org</a></p>
-      <p>Networking events for in-person and remote technicla working. Focused on Columbus, OH, but with links and tips
+      <p>Networking events for in-person and remote technical networking. Focused on Columbus, OH, but with links and tips
         for other locations as well. </p>
       <br>
 
