V 3.0 book time with me and email me

--- a/courses.html
+++ b/courses.html
@@ -1,8 +1,3 @@
-<!--
-    File: courses.html
-    This is the courses page, refactored to use the reusable navigation.
-    The JavaScript call at the bottom now specifies 'courses' as the active page.
--->
 <!DOCTYPE html>
 <html>
 
@@ -29,7 +24,6 @@
         </a>
         <p class="paragraph tagline">Lecturer and Student Coordinator, Computing Sciences, Franklin University<br>
         </p>
-        <!-- This is the placeholder for our reusable navigation -->
         <div id="nav-placeholder"></div>
       </div>
     </header>
@@ -137,6 +131,14 @@
         cutting edge and new as well as those that may not get significant treatment in other courses.</p>
 
     </article>
+    <div class="coffee-span-12">
+      <a href="https://outlook.office.com/bookwithme/user/cc96498ad05a42feaee895a0ba0ddbe7@franklin.edu/meetingtype/LKvY98xRcUOO6FO5XUnP-w2?anonymous&ismsaljsauthenabled&ep=mlink"
+        target="_blank" class="button">Book Time with Me</a>
+    </div>
+    <div class="coffee-span-12">
+      <a href="mailto:john.fulton2@franklin.edu"
+        target="_blank" class="button">Email Me at john.fulton2@franklin.edu</a>
+    </div>
   </main>
   
   <script>
