--- a/resume.html
+++ b/resume.html
@@ -1,8 +1,3 @@
-<!--
-    File: resume.html
-    This is the resume page, refactored to use the reusable navigation.
-    The JavaScript call at the bottom now specifies 'resume' as the active page.
--->
 <!DOCTYPE html>
 <html>
 
@@ -29,7 +24,6 @@
         </a>
         <p class="paragraph tagline">Lecturer and Student Coordinator, Computing Sciences, Franklin University<br>
         </p>
-        <!-- This is the placeholder for our reusable navigation -->
         <div id="nav-placeholder"></div>
       </div>
     </header>
@@ -39,7 +33,8 @@
 
       <p class="paragraph">
 
-        <a href="mailto:john@TechElevator.com">john.fulton2@franklin.edu</a><br>
+        <h2 class="heading-1">John Fulton</h2>
+        <p><a href="mailto:john@TechElevator.com">john.fulton2@franklin.edu</a></p><br>
 
 
       <h2 class="heading-1">Employment History:</h2><br>
@@ -240,6 +235,14 @@
         </li>
       </ul>
     </article>
+    <div class="coffee-span-12">
+      <a href="https://outlook.office.com/bookwithme/user/cc96498ad05a42feaee895a0ba0ddbe7@franklin.edu/meetingtype/LKvY98xRcUOO6FO5XUnP-w2?anonymous&ismsaljsauthenabled&ep=mlink"
+        target="_blank" class="button">Book Time with Me</a>
+    </div>
+    <div class="coffee-span-12">
+      <a href="mailto:john.fulton2@franklin.edu"
+        target="_blank" class="button">Email Me at john.fulton2@franklin.edu</a>
+    </div>
   </main>
 
   <script>
