--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-<!--
-    File: index.html
-    This is the main home page.
-    It now includes a placeholder for the navigation and the script to load it.
--->
 <!DOCTYPE html>
 <html>
 
@@ -27,13 +22,13 @@
         <h1 class="page-heading">John Fulton</h1>
         <p class="paragraph tagline">Lecturer and Student Coordinator, Computing Sciences, Franklin University<br>
         </p>
-        <!-- This is the placeholder for our reusable navigation -->
         <div id="nav-placeholder"></div>
       </div>
     </header>
   </div>
   <main class="row">
     <article class="coffee-span-8 coffee-880-span-8 coffee-549-span-12 coffee-700-span-12">
+      <br>
       <p class="paragraph">John has spent over 35 years as a professional developer, programming on a wide variety of
         systems from large
         mainframe computers to desktop computers and web-based systems. His most recent experience was 17 years at
@@ -69,6 +64,14 @@
     <div class="coffee-span-4 coffee-549-span-12 coffee-700-span-12">
       <img src="John.jpg">
     </div>
+    <div class="coffee-span-12">
+      <a href="https://outlook.office.com/bookwithme/user/cc96498ad05a42feaee895a0ba0ddbe7@franklin.edu/meetingtype/LKvY98xRcUOO6FO5XUnP-w2?anonymous&ismsaljsauthenabled&ep=mlink"
+        target="_blank" class="button">Book Time with Me</a>
+    </div>
+    <div class="coffee-span-12">
+      <a href="mailto:john.fulton2@franklin.edu"
+        target="_blank" class="button">Email Me at john.fulton2@franklin.edu</a>
+    </div>
   </main>
   <div class="row full-width-row footer">
     <div class="coffee-span-12">
@@ -78,28 +81,29 @@
   <script>
     // This function fetches the navigation and sets the active class
     async function loadNavigation(activePage) {
-        try {
-            // Fetch the HTML content from the nav.html file
-            const response = await fetch('nav.html');
-            const html = await response.text();
-            
-            // Insert the fetched HTML into the placeholder div
-            document.getElementById('nav-placeholder').innerHTML = html;
+      try {
+        // Fetch the HTML content from the nav.html file
+        const response = await fetch('nav.html');
+        const html = await response.text();
 
-            // Find the correct list item and add the active class
-            const activeTab = document.getElementById(`nav-${activePage}`);
-            if (activeTab) {
-                activeTab.classList.add('active-tab');
-            }
-        } catch (error) {
-            console.error('Error loading navigation:', error);
+        // Insert the fetched HTML into the placeholder div
+        document.getElementById('nav-placeholder').innerHTML = html;
+
+        // Find the correct list item and add the active class
+        const activeTab = document.getElementById(`nav-${activePage}`);
+        if (activeTab) {
+          activeTab.classList.add('active-tab');
         }
+      } catch (error) {
+        console.error('Error loading navigation:', error);
+      }
     }
 
     // Call the function on page load, passing the name of the active page
     document.addEventListener('DOMContentLoaded', () => {
-        loadNavigation('home');
+      loadNavigation('home');
     });
   </script>
 </body>
+
 </html>
